Bug 104705 - vcl OpenGL error copy string of selected text
Summary: vcl OpenGL error copy string of selected text
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All Windows (All)
: high critical
Assignee: Not Assigned
URL:
Whiteboard: target:5.4.0
Keywords: bibisected, regression
Depends on:
Blocks: VCL-OpenGL
  Show dependency treegraph
 
Reported: 2016-12-16 05:50 UTC by V Stuart Foote
Modified: 2016-12-21 06:10 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
WinDbg stack trace with TB39 symbols (21.62 KB, text/plain)
2016-12-16 06:48 UTC, V Stuart Foote
Details
WinDbg stack trace with TB39 symbols (19.64 KB, text/plain)
2016-12-17 19:02 UTC, V Stuart Foote
Details

Note You need to log in before you can comment on or make changes to this bug.
Description V Stuart Foote 2016-12-16 05:50:27 UTC
Description:
with OpenGL rendering enabled, attempt to copy a selected block of text crashes.

disabling OpenGL clear the issue.

On Windows 10 Pro 64-bit en-US with
Version: 5.4.0.0.alpha0+
Build ID: 0c565095983b0cc8b96a78012c611b7a03962204
CPU Threads: 8; OS Version: Windows 6.19; UI Render: GL; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-12-16_01:40:04
Locale: en-US (en_US); Calc: CL



Steps to Reproduce:
1. open Writer with OpenGL rendering enabled
2. insert dummy text (type "DT" highlight F3 to insert autotext) 
3. select a block of text with left button mouse drag
4. release mouse button
5. Ctrl+C --or-- context menu copy --or-- Std Toolbar Copy button
6. crash

Actual Results:  
crash

Expected Results:
ability to copy string of text to be able to paste


Reproducible: Always

User Profile Reset: No

Additional Info:
Following Stack trace.

0:028> g
ModLoad: 59a10000 59a27000   C:\LODev540_x86_20161216_TB39\program\dtrans.dll
WARNING: Continuing a non-continuable exception
WARNING: Continuing a non-continuable exception
(28fc.6f4): Break instruction exception - code 80000003 (first chance)
eax=00000000 ebx=0c86fac4 ecx=1d96b4f7 edx=00000000 esi=00000048 edi=01b8e5ec
eip=68bd3f0f esp=01b8e2b0 ebp=01b8e2c0 iopl=0         nv up ei pl zr na pe nc
cs=0023  ss=002b  ds=002b  es=002b  fs=0053  gs=002b             efl=00200246
d3d11!ThrowFailure+0x28:
68bd3f0f cc              int     3
0:000> ~* kp

.  0  Id: 28fc.6f4 Suspend: 1 Teb: 010cd000 Unfrozen
ChildEBP RetAddr  
01b8e2c0 68bc2c89 d3d11!ThrowFailure+0x28
01b8e5b8 68bc8223 d3d11!CDevice::CreateTexture2D_Worker+0x589
01b8e624 661117c0 d3d11!CDevice::CreateTexture2D+0xb3
01b8e650 66112f14 D2d1!CD3DDeviceCommon::CreateTexture+0x43
01b8e6dc 66074702 D2d1!CD3DSurface::Create+0xa3
01b8e754 66074627 D2d1!DCPresenter::BindDC+0xc2
01b8e774 6607496c D2d1!CBaseRenderTarget::BindDC+0x2f
01b8e7fc 683a1332 D2d1!D2DDCRenderTarget::BindDC+0x14c
WARNING: Stack unwind information not available. Following frames may be wrong.
01b8e82c 683a0aeb vcllo!TabitemValue::isRightAligned+0xba92
01b8e99c 683a2868 vcllo!TabitemValue::isRightAligned+0xb24b
01b8e9cc 683a2b16 vcllo!TabitemValue::isRightAligned+0xcfc8
01b8ea94 681ff888 vcllo!TabitemValue::isRightAligned+0xd276
01b8eaa4 68023181 vcllo!WriteWallpaper+0x6108
01b8eadc 68021dd4 vcllo!OutputDevice::ImplDrawTextDirect+0x181
01b8eaf8 6801ee40 vcllo!OutputDevice::ImplDrawText+0xe4
01b8eba4 67ee262e vcllo!OutputDevice::DrawText+0x3e0
01b8ecf0 67ee3be9 vcllo!StatusBar::ImplDrawItem+0x20e
01b8ed40 67db8d6c vcllo!StatusBar::Paint+0x1a9
01b8efb8 67dba1f6 vcllo!Point::operator+=+0x7cc
01b8f070 67db7e6a vcllo!vcl::Window::ImplCallPaint+0x386
01b8f0c8 67dba236 vcllo!BitmapEx::~BitmapEx+0x3da
01b8f17c 67db7e6a vcllo!vcl::Window::ImplCallPaint+0x3c6
01b8f1d4 67dba236 vcllo!BitmapEx::~BitmapEx+0x3da
01b8f288 67db9e60 vcllo!vcl::Window::ImplCallPaint+0x3c6
01b8f2a8 67dba346 vcllo!vcl::Window::ImplCallOverlapPaint+0xd0
01b8f2bc 67dbcb7f vcllo!vcl::Window::ImplHandlePaintHdl+0xd6
01b8f2c8 67db8803 vcllo!vcl::Window::LinkStubImplHandlePaintHdl+0xf
01b8f2dc 6823bb96 vcllo!Point::operator+=+0x263
01b8f2ec 6823e180 vcllo!Idle::Invoke+0x16
01b8f2f8 6823e2c4 vcllo!Scheduler::ImplStartTimer+0x180
01b8f3b8 682570db vcllo!Scheduler::ProcessTaskScheduling+0x134
01b8f5fc 6825924e vcllo!Application::ImplCallEventListeners+0x9cb
01b8f610 682550e6 vcllo!Application::Yield+0xe
01b8f658 6bcfee69 vcllo!Application::Execute+0x1b6
01b8f660 6bd03c6d sofficeapp!desktop::Desktop::DoExecute(void)+0x9 [c:\cygwin\home\tinderbox\master\desktop\source\app\app.cxx @ 1364]
01b8fd68 6825f4f7 sofficeapp!desktop::Desktop::Main(void)+0x1acd [c:\cygwin\home\tinderbox\master\desktop\source\app\app.cxx @ 1685]
01b8fe34 6825f99f vcllo!DeInitVCL+0xf57
01b8fe40 6bd3bc44 vcllo!SVMain+0x2f
01b8feb4 00eb100a sofficeapp!soffice_main(void)+0x74 [c:\cygwin\home\tinderbox\master\desktop\source\app\sofficemain.cxx @ 166]
01b8fec0 00eb103a soffice+0x100a
01b8fecc 00eb1078 soffice!main+0x1a
01b8fee4 00eb12ce soffice!main+0x58
01b8ff30 753462c4 soffice!main+0x2ae
01b8ff44 774e0fd9 KERNEL32!BaseThreadInitThunk+0x24
01b8ff8c 774e0fa4 ntdll!__RtlUserThreadStart+0x2f
01b8ff9c 00000000 ntdll!_RtlUserThreadStart+0x1b



User-Agent: Mozilla/5.0 (Windows NT 10.0; WOW64; rv:50.0) Gecko/20100101 Firefox/50.0
Comment 2 V Stuart Foote 2016-12-16 06:48:30 UTC
Created attachment 129680 [details]
WinDbg stack trace with TB39 symbols

Sorry, symbols did not resolve well to source line. But consistent crash at this location TB39 and TB62 x86 builds with OpenGL rendering enabled.
Comment 3 Khaled Hosny 2016-12-16 07:38:25 UTC
There is nothing related to HarfBuzz in the backtrace or the commit range. I can’t reproduce the crash on master either.
Comment 4 m_a_riosv 2016-12-16 22:23:13 UTC
Reproducible.
Version: 5.4.0.0.alpha0+
Build ID: 0c565095983b0cc8b96a78012c611b7a03962204
CPU Threads: 4; OS Version: Windows 6.19; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-12-16_01:40:04
Locale: es-ES (es_ES); Calc: CL
Comment 5 V Stuart Foote 2016-12-17 19:02:46 UTC
Created attachment 129728 [details]
WinDbg stack trace with TB39 symbols

Hey, bit of a WAG but any chance this got wrapped up in the glew -> epoxy swap...

see thread 22 of the attached WinDbg StackTrace

=-ref-=

https://cgit.freedesktop.org/libreoffice/core/commit/?id=482d7ce61b423600b41b459eb26a2cc221cd0acf

https://cgit.freedesktop.org/libreoffice/core/commit/?id=48b561c770699c9730de25ada2934cda36110eba
Comment 6 Caolán McNamara 2016-12-19 10:55:10 UTC
237df4cc 6775a560 0x0
237df4d4 6a68b0cd epoxy!epoxy_wglGetCurrentContext_dispatch_table_thunk(void)+0x10 [c:\cygwin\home\tinderbox\master\workdir\unpackedtarball\epoxy\src\wgl_generated_dispatch.c @ 1482]
237df4f8 6a673d66 vcllo!OpenGLWindow::setRenderer+0xaaad
237df5c0 6a6a135b vcllo!OpenGLContext::prepareForYield+0x136

looks pretty relevant alright :-(
Comment 7 Commit Notification 2016-12-20 12:18:34 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fdefa97e0c0a97fc23bcc28e9d734f22dcac2c7d

Related: tdf#104705 an effort to address crash

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 V Stuart Foote 2016-12-21 06:10:46 UTC
On Windows 10 Pro 64-bit en-US with
Version: 5.4.0.0.alpha0+
Build ID: 36750bc977b3210b23b7822abd395b30a78af6f5
CPU Threads: 8; OS Version: Windows 6.19; UI Render: GL; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-12-21_00:18:41
Locale: en-US (en_US); Calc: CL

That seems to have resolved things, no longer crashing with copy of selection.