Related: tdf#104705 an effort to address crash

Change-Id: I43284c19d0f38fb8fbd7e908c5d255cdfd399015
Reviewed-on: https://gerrit.libreoffice.org/32222
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>